[gd_scene load_steps=5 format=3 uid="uid://c33wcmgvgldsm"]

[ext_resource type="Script" path="res://scripts/enemy/detection.gd" id="1_s41nv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3q21b"]
transparency = 4
cull_mode = 2
shading_mode = 0
specular_mode = 2
albedo_color = Color(1, 0, 0, 0.25098)

[sub_resource type="CylinderMesh" id="CylinderMesh_m8cwx"]
material = SubResource("StandardMaterial3D_3q21b")
top_radius = 0.0
bottom_radius = 50.0
height = 50.0
rings = 1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vkv62"]
points = PackedVector3Array(0, -25, -50, -4.90407, -25, -49.7651, -2.45693, 0, -24.8825, 0, 25, 0, 4.89428, -25, -49.7651, -9.7592, -25, -49.0407, -4.88449, 0, -24.5204, -7.26311, 0, -23.933, -9.57322, 0, -23.101, -11.7854, 0, -22.0536, -27.78, -25, -41.5818, -15.8673, 0, -19.3324, -35.3563, -25, -35.3563, -19.3324, 0, -15.8673, -41.5818, -25, -27.78, -22.0536, 0, -11.7854, -23.101, 0, -9.57322, -23.933, 0, -7.26311, -24.5204, 0, -4.88449, -24.8825, 0, -2.45693, -50, -25, 0, -49.7651, -25, 4.89428, -49.0407, -25, 9.74941, -23.933, 0, 7.25333, -46.202, -25, 19.1269, -22.0536, 0, 11.7756, -41.5818, -25, 27.7702, -19.3324, 0, 15.8575, -35.3563, -25, 35.3465, -15.8673, 0, 19.3226, -27.78, -25, 41.572, -23.5709, -25, 44.0877, -19.1366, -25, 46.1923, -7.26311, 0, 23.9233, -9.7592, -25, 49.0309, -4.90407, -25, 49.7553, 0, -25, 50, 4.89428, -25, 49.7553, 9.74941, -25, 49.0309, 14.5067, -25, 47.8465, 19.1269, -25, 46.1923, 23.5611, -25, 44.0877, 27.7702, -25, 41.572, 31.715, -25, 38.6453, 35.3465, -25, 35.3465, 38.6453, -25, 31.715, 41.572, -25, 27.7702, 44.0877, -25, 23.5611, 46.1923, -25, 19.1269, 47.8465, -25, 14.5067, 49.0309, -25, 9.74941, 49.7553, -25, 4.89428, 50, -25, 0, 49.7553, -25, -4.90407, 49.0309, -25, -9.7592, 23.9233, 0, -7.26311, 46.1923, -25, -19.1366, 44.0877, -25, -23.5709, 41.572, -25, -27.78, 19.3226, 0, -15.8673, 35.3465, -25, -35.3563, 15.8575, 0, -19.3324, 27.7702, -25, -41.5818, 11.7756, 0, -22.0536, 19.1269, -25, -46.202, 7.25333, 0, -23.933, 9.74941, -25, -49.0407, -14.5164, -25, -47.8563, -19.1366, -25, -46.202, -23.5709, -25, -44.0975, -31.7247, -25, -38.6551, -38.6551, -25, -31.7247, -44.0975, -25, -23.5709, -46.202, -25, -19.1366, -47.8563, -25, -14.5164, -49.0407, -25, -9.7592, -49.7651, -25, -4.90407, -47.8563, -25, 14.5067, -44.0975, -25, 23.5611, -38.6551, -25, 31.715, -31.7247, -25, 38.6453, -14.5164, -25, 47.8465, 47.8465, -25, -14.5164, 38.6453, -25, -31.7247, 31.715, -25, -38.6551, 23.5611, -25, -44.0975, 14.5067, -25, -47.8563)

[node name="Detection" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_s41nv")

[node name="SightMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -25)
cast_shadow = 0
mesh = SubResource("CylinderMesh_m8cwx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -25)
shape = SubResource("ConvexPolygonShape3D_vkv62")

[node name="WallDetector" type="RayCast3D" parent="."]
enabled = false
target_position = Vector3(0, 0, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
